Fix hero video / intro z-index issues

--- a/resources/src/pages/landingPage.styl
+++ b/resources/src/pages/landingPage.styl
@@ -62,6 +62,40 @@
   -webkit-filter drop-shadow(0px 0px 5px #000)
   width 250px
 
+.hero-text
+  color #fff
+  z-index 10
+  position fixed
+  top 70px
+  left 50%
+  transform translateX(-50%)
+  text-align center
+  width 100%
+  max-width 1200px
+  pointer-events none
+
+  *
+    pointer-events auto
+
+  .play-button
+    background url('/images/play-button.png') no-repeat
+    width 53px
+    height 61px
+    margin 0 auto
+    margin-top 60px
+    text-indent -9999px
+    transition filter 0.6s ease
+
+    &:hover
+      filter drop-shadow(0px 0px 10px #fff)
+      -webkit-filter drop-shadow(0px 0px 10px #fff)
+      transition filter 0.6s ease
+      cursor pointer
+
+  h1
+    font-size 48px
+    text-shadow 0 0 2px rgba(0, 0, 0, .4)
+
 .hero-video
   position fixed
   top 0
@@ -71,37 +105,7 @@
   z-index -1
   overflow hidden
   transition opacity 0.3s ease
-  background #000  // Fallback background
-
-  .hero-text
-    color #fff
-    z-index 3
-    position fixed
-    top 70px
-    left 50%
-    transform translateX(-50%)
-    text-align center
-    width 100%
-    max-width 1200px
-
-    .play-button
-      background url('/images/play-button.png') no-repeat
-      width 53px
-      height 61px
-      margin 0 auto
-      margin-top 60px
-      text-indent -9999px
-      transition filter 0.6s ease
-
-      &:hover
-        filter drop-shadow(0px 0px 10px #fff)
-        -webkit-filter drop-shadow(0px 0px 10px #fff)
-        transition filter 0.6s ease
-        cursor pointer
-
-    h1
-      font-size 48px
-      text-shadow 0 0 2px rgba(0, 0, 0, .4)
+  background #000
 
 .twitch-live
   right 40px
